k8s/httproute/order_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: order-route 
  namespace: opslora-test-ns
  labels:
    app: order
spec:
  parentRefs:
  - name: opslora-gateway
    namespace: opslora-gateway-ns
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/v1/orders
    backendRefs:
    - name: order-service
      port: 3000
